tests/NormalTests/paczka1/fuzzy1/36046730.err
Error in line 4: A292 A292 87,4
Error in line 2: b81oCP A693 23,6
Error in line 11: b81oCP S977 0,3
Error in line 6: xkr S977 78,7
Error in line 24: b81oCP A292 44,2
Error in line 25: b81oCP A152 80,4
Error in line 30: MEdrZKW6 S977 64,3
Error in line 19: IhyH A693 14,5
